Fix #4797: Embedded notes scaling and blacklist conflicts.
Fix embedded notes being blank when the post starts out blacklisted. Caused by incorrect width
calculation when the post was hidden using `display: none !important`.

This fix is somewhat fragile as we have two rules that affect the same element:

    .note-container { display: inline-block; }
    .blacklisted-active { display: none; }

Which rule wins depends on the order in which the rules are declared in the CSS bundle.

Fix #5176: Out-of-bound class incorrectly being added to all rotated embedded notes
Fix #5290: Blacklisting "comic" makes translated (embeded notes) comics unreadable
Fix #5794: Embed text disappears if the post is blacklisted.

--- a/app/components/blacklist_component/blacklist_component.scss
+++ b/app/components/blacklist_component/blacklist_component.scss
@@ -1,3 +1,3 @@
 .blacklisted-active {
-  display: none !important;
+  display: none;
 }
